--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,4 @@ baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Zaw Myo Tun"
 
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
