--- a/config.toml
+++ b/config.toml
@@ -33,5 +33,5 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     identifier = "linkedin"
     name = "LinkedIn"
     title = "LinkedIn"
-    url = "www.linkedin.com/in/zawmyotun11"
+    url = "https://linkedin.com/in/zawmyotun11"
     weight = 5
